--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,51 @@ ol {
 	}
 }
 
+
+/*---------------------
+Diseño web Data Science
+-----------------------*/
+.blog-grid-warp {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; /* Ajusta el espacio entre los elementos */
+}
+
+.blog-grid {
+    flex: 1 1 calc(25% - 20px); /* 4 columnas, ajusta si necesitas menos */
+    box-sizing: border-box;
+}
+
+.blog-item {
+    background-color: #fff;
+    border-radius: 0px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.blog-item img {
+    width: 100%;
+    height: 200px; /* Puedes ajustar este valor para la altura deseada */
+    object-fit: cover; /* Esto hace que la imagen se recorte y ajuste al contenedor */
+}
+
+.bi-tag, .bi-text {
+    padding: 10px;
+}
+
+@media (max-width: 768px) {
+    .blog-grid {
+        flex: 1 1 calc(50% - 20px); /* 2 columnas en pantallas pequeñas */
+    }
+}
+
+@media (max-width: 480px) {
+    .blog-grid {
+        flex: 1 1 100%; /* 1 columna en móviles */
+    }
+}
+
 /*---------------------
    Helper CSS
  -----------------------*/
