--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ body {
 	}
 }
 
+ul{
+	color: #ffffff;
+}
+
 h1,
 h2,
 h3,
@@ -470,7 +474,7 @@ Diseño web Data Science
 	display: block;
 	font-size: 30px;
 	font-weight: 600;
-	color: #b2b2b2;
+	color: #ffffff;
 	-webkit-transition: 0.3s;
 	-o-transition: 0.3s;
 	transition: 0.3s;
